| Bug #32738 | mysqld: Two slow log option/variable descriptions are inaccurate | ||
|---|---|---|---|
| Submitted: | 26 Nov 2007 20:05 | Modified: | 12 Nov 2009 19:25 |
| Reporter: | Paul DuBois | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Logging | Severity: | S3 (Non-critical) |
| Version: | 5.1, 6.0 | OS: | Any |
| Assigned to: | Konstantin Osipov | CPU Architecture: | Any |
[26 Nov 2007 20:22]
Valeriy Kravchuk
Thank you for a bug report.
[23 Oct 2008 11:24]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/56877 2739 Konstantin Osipov 2008-10-23 Bug#32738 "mysqld: Two slow log option/variable descriptions are inaccurate" Update option description per suggestion from the documentation team.
[23 Oct 2008 11:25]
Konstantin Osipov
Queued into 6.0-runtime.
[8 Dec 2008 21:38]
Bugs System
Pushed into 6.0.8-alpha (revid:kostja@sun.com-20081023112344-ps1xog3ft7hjx181) (version source revid:kostja@sun.com-20081023112344-ps1xog3ft7hjx181) (pib:5)
[8 Dec 2008 23:18]
Paul DuBois
Cosmetic change. No changelog entry needed.
[14 Oct 2009 14:09]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/86830 2922 Konstantin Osipov 2009-10-14 Backport of: ---------------------------------------------------------- revno: 2630.28.1 committer: Konstantin Osipov <kostja@sun.com> branch nick: mysql-6.0-runtime timestamp: Thu 2008-10-23 15:23:44 +0400 message: Bug#32738 "mysqld: Two slow log option/variable descriptions are inaccurate" Update option description per suggestion from the documentation team. @ sql/mysqld.cc Update options help texts (Bug#32738). Use - instead of _ in option names.
[3 Nov 2009 7:16]
Bugs System
Pushed into 6.0.14-alpha (revid:alik@sun.com-20091102151658-j9o4wgro47m5v84d) (version source revid:alik@sun.com-20091023064702-2f8jdmny61bdl94u) (merge vers: 6.0.14-alpha) (pib:13)
[3 Nov 2009 15:29]
Paul DuBois
Already fixed in earlier 6.0.x release.
[12 Nov 2009 8:21]
Bugs System
Pushed into 5.5.0-beta (revid:alik@sun.com-20091110093229-0bh5hix780cyeicl) (version source revid:mikael@mysql.com-20091103113702-p61dlwc6ml6fxg18) (merge vers: 5.5.0-beta) (pib:13)
[12 Nov 2009 19:25]
Paul DuBois
Cosmetic change. No changelog entry needed.

Description: sql/mysqld.cc has a couple of slow log option/variable descriptions for the --help text that could be improved. {"log-slow-queries", OPT_SLOW_QUERY_LOG, "Log slow queries to a table or log file. Defaults logging to table mysql.slow_log or hostname-slow.log if --log-output=file is used. Must be enabled to activate other slow log options.", This is inaccurate. As written, it seems to mean that the default is to write to the mysql.slow_log *table*, and that if --log-output=file is given, the log is written to the hostname-slow.log *file*. But the default is to log to a file if the slow log is enabled. I suggest this wording instead: "Log slow queries to a table or log file. Logging defaults to hostname-slow.log file, or mysql.slow_log table if --log-output=table is used. Log must be enabled to activate other slow log options.", {"min_examined_row_limit", OPT_MIN_EXAMINED_ROW_LIMIT, "Don't log queries which examine less than min_examined_row_limit rows to file.", This is inaccurate because it says "file" whereas the slow log might be written only to a table. I suggest this wording instead (avoid use of "file" or "table" altogether): "Don't write queries to slow log that examine fewer than min_examined_row_limit rows.", How to repeat: See above.