Bug#32738 "mysqld: Two slow log option/variable descriptions are inaccurate" Update option description per suggestion from the documentation team.